--- a/Week 1/mission assignments/styles.css
+++ b/Week 1/mission assignments/styles.css
@@ -1,56 +1,54 @@
-
 body {
+    /*Font styling*/
     font-weight: lighter;
     font-size: 20px;
     line-height: 1.5;
+    /*Define border for body*/
     margin: 15%;
     margin-top: 2.5%;
     margin-bottom: 2%;
+    /*Border line*/
     border: 1px solid #ccc;
 }
-
-main {
-    padding-top: 4%;
-}
-
-.container{
-    text-align: left;
-    padding: 40px;
+.content{
+    /*Declare width and align text*/
     max-width: 600px;
+    text-align: left;
+    /*Formatting*/
+    padding: 40px;
     margin: auto;
 }
-
-.title h1 h2 {
-    font-weight: 200;
-    letter-spacing: 10px;
+main {
+    /*Additional formatting*/
+    padding-top: 4%;
 }
-
-.title h2 {
-    color:#006EB6;
-    font-size: 20px;
-    border-bottom: 1px solid #c5c5c5;
-    letter-spacing: 2px;
-    font-weight: 200;
-}
-
 .title {
+    /*Text styling*/
     text-transform: capitalize;
     text-align: center;
     line-height: 1;
     letter-spacing: 5px;
     font-weight: 200;
 }
-
+.title h2 {
+    /*Heading 2 specifications*/
+    color:#006EB6;
+    font-size: 18px;
+    border-bottom: 1px solid #c5c5c5;
+    letter-spacing: 3px;
+}
 #logo {
+    /*Logo formatting*/
     display: block;
     margin: 0 auto;
     width: 150px;
 }
 .list {
+    /*Formatting to match image*/
     padding-bottom: 3%;
 }
-
 .italic {
+    /*Style line to be italicized*/
     font-style: italic;
 }
 
