--- a/Week 1/mission assignments/styles.css
+++ b/Week 1/mission assignments/styles.css
@@ -52,3 +52,22 @@ main {
     font-style: italic;
 }
 
+/*Dark theme mode*/
+
+.dark {
+    background-color: #333;
+    color:white;
+}
+.dark h2 {
+    color: #A0D4ED; /* from the official BYUI branding page*/
+}
+
+/*Party Mode*/
+.party {
+    background-color: pink;
+    color: green;
+}
+
+.party h2 {
+    color: purple;
+}
