Party Mode Updates

--- a/Week 1/mission assignments/styles.css
+++ b/Week 1/mission assignments/styles.css
@@ -63,11 +63,18 @@ main {
 }
 
 /*Party Mode*/
-.party {
-    background-color: pink;
-    color: green;
-}
 
-.party h2 {
-    color: purple;
-}
+.party {
+    animation: colorCycle 5s linear infinite;
+    background-color: rgb(128, 52, 115);
+    cursor: grab;
+  }
+  
+  @keyframes colorCycle {
+    0%   { color: red; }
+    20%  { color: orange; }
+    40%  { color: yellow; }
+    60%  { color: green; }
+    80%  { color: blue; }
+    100% { color: violet; }
+  }
