--- a/Week 1/mission assignments/coolpics/coolpics.css
+++ b/Week 1/mission assignments/coolpics/coolpics.css
@@ -36,22 +36,31 @@ header h1 {
 
 nav {
   margin-top: 10px;
+  display: grid;
+  text-align: center;
 }
+
 button.menu {
   background: none;
   border: none;
   color: white;
   font: inherit;
-  text-decoration: underline;
+  /*text-decoration: underline; */
+  position: relative;
+  top: 5px;
+  right: 1%;
   cursor: pointer;
-  padding: 0;
+  font-size: 1.5em;
 }
 
 nav a {
   margin: 0 15px;
   color: white;
-  text-decoration: underline;
+  /*text-decoration: underline; */
   font-weight: bold;
+}
+.hide {
+	display: none;
 }
 
 main {
@@ -66,16 +75,16 @@ h2 {
 .gallery {
   display: grid;
   gap: 20px;
-  max-width: 600px;
   margin: 0 auto;
   grid-template-columns: repeat(1fr);
 }
 
 .gallery img {
-  width: 100%;
-  max-width: 150px;
-  border: 5px solid white;
+  max-width: 100%;
+  height: 250px;
+  width: 250px;
   object-fit: cover;
+  border: 5px solid white;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 img {
@@ -94,6 +103,9 @@ footer {
     .gallery {
         grid-template-columns: 1fr 1fr;
     }
+    nav {
+      display: none;
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -106,6 +118,14 @@ footer {
     header, footer {
         padding: 20px;
     }
+    nav {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 7%;
+      width: 100%;
+    }
+
 }
 
 @media (min-width: 1000px) {
@@ -117,5 +137,9 @@ footer {
 
     .viewer img {
         max-height: 100%;
+    }
+    nav {
+      display: flex;
+      text-align: center;
     }
 }
