--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,79 +1,137 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --primary-color: #26547c;
-  --secondary-color: #ef476f;
-  --color-three: #FFD166;
-  --color-four: #06d6a0;
-  --color-four: #FCFCFC;
-  --font-main: 'Arial', sans-serif;
-  --body-font: "Helvetica", "Arial", sans-serif;
-  --headline-font: "Lora", "Impact", serif;
-  --spacing: 1rem;
+  --headline-color: #af1b3f;
+  --accent-color: #efc69b;
+  --text: #473144;
+  --primary-font: Helvetica, Arial, sans-serif;
+  --secondary-font: Lora, Impact, serif;
 }
 
-.main-nav {
-    display: grid;
-    grid-template-columns: 3fr;
-    justify-content: end;
-    color: #ef476f;
+/* universal */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#book-title {
-    color: #ef476f;
+/* accessibility - skip to content */
+.skiptocontent a {
+  position: absolute;
+  left: 0;
+  top: -40px;
+  padding: 8px;
 }
-
+.skiptocontent a:focus {
+  top: 0;
+}
+/* body */
+body {
+  font-family: var(--primary-font);
+  color: var(--text);
+}
+/* main */
 main {
-    background-color: var(--color-four);
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-    padding: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+/* header */
+header {
+  text-align: center;
+}
+h1, h2 {
+  font-family: var(--secondary-font);
+  color: var(--headline-color);
 }
 
-.title {
-    text-align: center;
+h1 {
+  margin: 40px 0;
+  color: var(--text);
 }
-header h1 {
-    font-size: 2.5rem;
-    text-align: center;
-    padding: 1rem 0;
-    font-family: var(--headline-font);
+
+/* navigation */
+.main-nav, .book-title {
+  color: var(--headline-color);
 }
 
 .main-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: end;
-    gap: 2rem;
-    border-top: 2px solid var(--secondary-color);
-    border-bottom: 2px solid var(--secondary-color);
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  justify-content: right;
+  justify-items: right;
+  margin: 0 auto;
+  padding: 20px;
+  list-style: none;
+  border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
+}
+a {
+  color: #af1b3f;
+  text-decoration: none;
 }
 
-.main-nav a {
-    text-decoration: none;
-    font-size: 1.25rem;
-    color: var(--secondary-color);
-    font-weight: bold;
+a:hover {
+  text-decoration: underline;
 }
 
-header {
-    background-color: var(--color-five);
+/* main content */
+.content-layout {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 20px;
+  margin-top: 10px;
 }
 
-#date {
-    grid-column: 1;
+/* articles */
+.articles {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 70px;
+}
+article {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  align-items: stretch;
+}
+.article-details {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0 20px;
+  align-content: start;
+  gap: 15px;
+  text-align: right;
+  border-right: 2px solid var(--accent-color);
+  padding-right: 20px;
+  height: 100%;
+}
+.article-content {
+  display: grid;
+  gap: 20px;
+}
+.article-content img {
+  max-width: 50%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
-#book-spot {
-    grid-column: 2;
+.date {
+  font-size: 1.2em;
 }
 
-#filter {
-    grid-column: 3;
+.article-content h2 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-
+.filters {
+  padding: 20px;
+  border: 2px solid var(--accent-color);
+}
+/* Footer */
+footer {
+  text-align: center;
+  margin-top: 30px;
+  padding: 20px;
+}
