--- a/PersonalSite/site-plan.css
+++ b/PersonalSite/site-plan.css
@@ -5,14 +5,14 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396e94;
-  --secondary-color: #e7c24f;
-  --accent1-color: #a42212;
-  --accent2-color: white;
+  --primary-color: #667eea;
+  --secondary-color: #764ba2;
+  --accent1-color: #e8eaf6;
+  --accent2-color: #333;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Arial;
+  --paragraph-font: Arial, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: var(
@@ -24,8 +24,8 @@ Fonts are separated by a | */
   ); /* paragraph text on a white background */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */
   --paragraph-background-color: var(--primary-color);
-  --nav-link-color: var(--primary-color);
-  --nav-background-color: var(--secondary-color);
+  --nav-link-color: var(--accent1-color);
+  --nav-background-color: var(--primary-color);
   --nav-hover-link-color: white;
   --nav-hover-background-color: var(--primary-color);
 }
